<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">My App Portfolio</string>
    <string name="main_subtitle">My Nanodegree Apps!</string>
    <string name="appname_spotify">SPOTIFY STREAMER</string>
    <string name="appname_scores">SCORES APP</string>
    <string name="appname_library">LIBRARY APP</string>
    <string name="appname_bigger">BUILD IT BIGGER</string>
    <string name="appname_xyz">XYZ READER</string>
    <string name="appname_capstone">CAPSTONE: MY OWN APP</string>
    <string name="logname">myportfolio</string>
</resources>
